# inventory-order-system

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 132d0eb6184b_initial_schema.py
docs/: optimization.md
src/app/: main.py
src/app/api/: deps.py  orders.py  schemas.py
src/app/core/: config.py
src/app/db/: __init__.py  base.py  models.py  queries.py
src/app/services/: order.py
