[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
force-include = { "src/app/py.typed" = "app/py.typed", "src/app/db/py.typed" = "app/db/py.typed", "src/app/core/py.typed" = "app/core/py.typed" }

[project]
name = "inventory-order-system"
version = "0.1.0"
description = "Inventory and order management with hierarchical product catalog"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]

[tool.mypy]
mypy_path = "src"

[tool.pyright]
extraPaths = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
